WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32501
AX: there's an infinite loop going on for some webpages - facebook.com
https://bugs.webkit.org/show_bug.cgi?id=32501
Summary
AX: there's an infinite loop going on for some webpages - facebook.com
chris fleizach
Reported
2009-12-13 16:22:39 PST
probably not infinite, but way too slow
Attachments
patch
(99.93 KB, patch)
2009-12-13 16:48 PST
,
chris fleizach
abarth
: review-
Details
Formatted Diff
Diff
patch
(3.84 KB, patch)
2009-12-13 18:12 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(9.17 KB, patch)
2009-12-13 23:18 PST
,
chris fleizach
adele
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2009-12-13 16:48:05 PST
Created
attachment 44769
[details]
patch the problem is that we can't call parentObjectUnignored while in accessibilityIsIgnored... it leads to a lot of recursiveness that might not ever end... it was being done when determining if an object was within a ARIA tree. that check should 1) be moved to all platforms 2) not call parentObjectUnignored()
WebKit Review Bot
Comment 2
2009-12-13 16:48:41 PST
style-queue ran check-webkit-style on
attachment 44769
[details]
without any errors.
Adam Barth
Comment 3
2009-12-13 16:52:33 PST
Comment on
attachment 44769
[details]
patch That test case is huge. Is it possible to test the issue with a reduced test case? More problematically, that HTML looks to be a derivative work of Facebook. I suspect we don't have the right to re-license it under the BSD license.
chris fleizach
Comment 4
2009-12-13 18:10:13 PST
the bug looks like its a result of the huge number of elements on the page, not in any particular snippet. i can only resubmit without a layout test
chris fleizach
Comment 5
2009-12-13 18:12:01 PST
Created
attachment 44773
[details]
patch this patch omits the layout test. the slow down captured by this bug is a result of pages that have deeply nested hierarchy and a lot of it. i can't simulated a page without copying another webpage
WebKit Review Bot
Comment 6
2009-12-13 18:15:50 PST
style-queue ran check-webkit-style on
attachment 44773
[details]
without any errors.
chris fleizach
Comment 7
2009-12-13 22:41:08 PST
Comment on
attachment 44773
[details]
patch need to see if i can create a test
chris fleizach
Comment 8
2009-12-13 23:18:56 PST
Created
attachment 44774
[details]
patch made a test that gets the behavior. we just needed a lot of elements inside of each other
WebKit Review Bot
Comment 9
2009-12-13 23:19:59 PST
style-queue ran check-webkit-style on
attachment 44774
[details]
without any errors.
chris fleizach
Comment 10
2009-12-14 08:25:43 PST
http://trac.webkit.org/changeset/52095
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug