AX: there's an infinite loop going on for some webpages - facebook.com https://bugs.webkit.org/show_bug.cgi?id=32501

Reviewed by Adele Peterson.

WebCore:

The problem is that parentObjectUnignored() cannot be called
while in accessibilityIsIgnored, because it leads to
recursiveness. Specifically, there were checks to determine
if an object was within a ARIA tree. That check should
1) be moved to all platforms, and 2) not call parentObjectUnignored().

Test: accessibility/hang-in-isignored.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::isAllowedChildOfTree):
(WebCore::AccessibilityRenderObject::accessibilityIsIgnored):
* accessibility/AccessibilityRenderObject.h:
* accessibility/mac/AccessibilityObjectMac.mm:
(WebCore::AccessibilityObject::accessibilityPlatformIncludesObject):

LayoutTests:

* accessibility/hang-in-isignored-expected.txt: Added.
* accessibility/hang-in-isignored.html: Added.



Canonical link: https://commits.webkit.org/43519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52095 268f45cc-cd09-0410-ab3c-d52691b4dbfc